--- a/assets/index.html
+++ b/assets/index.html
@@ -9,16 +9,16 @@
 <body>
     <div class= "quiz-container"> 
         <div class= "question-number">
-            <h3>Question <span class="question-num-value">1</span> of 5</h3>
+            <h3>Question <span class="question-num-value"></span> of <span class="total-questions"></h3>
         </div>
         <div class= "question">
-            Commonly used data types DO NOT include:
+            
         </div>
         <div class= "options">
-            <div id="0" class="option1">Strings</div>
-            <div id="1" class="option2">Booleans</div>
-            <div id="2" class="option3 correct">Alerts</div>
-            <div id="3" class="option4 incorrect">Numbers</div>
+            <div id="0" class="option1"></div>
+            <div id="1" class="option2"></div>
+            <div id="2" class="option3"></div>
+            <div id="3" class="option4"></div>
         </div>
         <div class= "button">
             <button type="button" class="btn">Next</button>
@@ -29,6 +29,6 @@
     </div>
 
 
-
+    <script src="script.js"></script>
 </body>
 </html>
